feat: remove previous PDA if exists

--- a/Anchor.toml
+++ b/Anchor.toml
@@ -2,12 +2,14 @@
 seeds = false
 [programs.localnet]
 coin_flip = "2WWFGRA4f81ubcjtkh112obV8brzF6nkhBCDGh7Z8hqo"
+[programs.devnet]
+coin_flip = "2WWFGRA4f81ubcjtkh112obV8brzF6nkhBCDGh7Z8hqo"
 
 [registry]
 url = "https://anchor.projectserum.com"
 
 [provider]
-cluster = "localnet"
+cluster = "devnet"
 wallet = "/Users/mertozgun/.config/solana/id.json"
 
 [scripts]
